# pypatterns

./: .gitignore  README.md  pyproject.toml
dsa/notebooks/: algorithm_analysis.ipynb  arrays.ipynb  backtracking.ipynb  containers.ipynb  heaps.ipynb  iteration.ipynb  linked_lists.ipynb  sorting.ipynb  stacks_queues.ipynb  strings.ipynb  trees.ipynb
dsa/notebooks/algorithms/: iteration.ipynb  searching.ipynb  sorting.ipynb
pset/leetcode/advanced_graphs/: 0269_alien_dictionary.py  0332_find_itinerary.py  0743_network_delay.py  0778_swim_water.py  0787_cheapest_flights.py  1584_min_connect.py
pset/leetcode/arrays/: 0001_two_sum.py  0036_valid_sudoku.py  0049_group_anagrams.py  0125_valid_palindrome.py  0128_longest_consecutive.py  0217_contains_duplicate.py  0238_product_array.py  0242_valid_anagram.py  0243_shortest_word.py  0271_encode_decode.py  0345_reverse_vowels.py  0347_topk_frequent.py  1832_check_pangram.py
pset/leetcode/backtracking/: 0017_letter_combinations.py  0022_generate_parentheses.py  0039_combination_sum.py  0040_combination_sum2.py  0046_permutations.py  0051_solve_nqueens.py  0078_subsets.py  0079_word_search.py  0090_subsets_duplicates.py  0131_palindrome_partition.py
pset/leetcode/binary_search/: 0004_median_sorted.py  0033_search_rotated.py  0074_2d_matrix.py  0153_min_rotated.py  0704_binary_search.py  0875_koko_bananas.py  0981_time_map.py
pset/leetcode/graphs/: 0127_word_ladder.py  0130_surrounded_regions.py  0133_clone_graph.py  0200_num_islands.py  0207_course_schedule.py  0210_course_schedule2.py  0261_valid_tree.py  (+6 more)
(+84 files in other folders)
